docs/versioned_docs/version-2.1.0/widgets/spinner.md
---
id: spinner
title: Spinner
---
# Spinner

Spinner widget can be used to provide a visual indication that an action is in progress by awaiting a change.

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/widgets/spinner/spinner.png" alt="ToolJet - Widget Reference - Spinner" />

</div>

## General
### Tooltip

A Tooltip is often used to specify extra information about something when the user hovers the mouse pointer over the widget.

Under the <b>General</b> accordion, you can set the value in the string format. Now hovering over the widget will display the string as the tooltip.

<div style={{textAlign: 'center'}}>

<img className="screenshot-full" src="/img/tooltip.png" alt="ToolJet - Widget Reference - Spinner" />

</div>

## Layout

### Show on desktop

Toggle on or off to display the widget in desktop view. You can programmatically determine the value by clicking on `Fx` to set the value `{{true}}` or `{{false}}`.
### Show on mobile

Toggle on or off to display the widget in mobile view. You can programmatically determine the value by clicking on `Fx` to set the value `{{true}}` or `{{false}}`.

## Styles

### Visibility

Toggle on or off to control the visibility of the widget. You can programmatically change its value by clicking on the `Fx` button next to it. If `{{false}}` the widget will not be visible after the app is deployed. By default, it's set to `{{true}}`.

### Color

Change the color of the Spinner by entering the `Hex color code` or choosing a color of your choice from the color-picker. 

### Size

Change the size of the Spinner by selecting options from the dropdown. It has small and large sizes available.